Fixed copyright spacing

--- a/css/main.css
+++ b/css/main.css
@@ -213,10 +213,6 @@ textarea {
     font-size: 1.2em;
   }
 
-  .copyright {
-    color: #eeefda;
-  }
-
  /* -------------------- Base Header - Footer Styles ----------------------*/
 
 /* Header styles */
